tests/NormalTests/paczka1/small_fuzzy/59572629.err
Error in line 4: C398EljlC S477 17,7
Error in line 2: mTX S477 53,0
Error in line 1: FtoFGAdTUEi A4 60,3
